force-app/main/default/objects/Learning_Material_Instance__c/Learning_Material_Instance__c.object-meta.xml
<CustomObject>
    <description>Represents a single learner’s progress for a specific Learning Material.</description>
    <label>Learning Material Instance</label>
    <nameField>
        <displayFormat>LMI-{00000000}</displayFormat>
        <label>Learning Material Instance Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Learning Material Instances</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>