force-app/main/default/objects/Learning_Material_Instance__c/fields/Attempt_Number__c.field-meta.xml
<CustomField>
    <fullName>Attempt_Number__c</fullName>
    <description>Track which attempt this instance represents (1st, 2nd, 3rd, etc.).</description>
    <inlineHelpText>Which attempt number this quiz completion represents.</inlineHelpText>
    <label>Attempt Number</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>