force-app/main/default/objects/Learning_Material_Instance__c/fields/Completed_On__c.field-meta.xml
<CustomField>
    <fullName>Completed_On__c</fullName>
    <description>Completion timestamp.</description>
    <inlineHelpText>Completion timestamp.</inlineHelpText>
    <label>Completed On</label>
    <type>DateTime</type>
</CustomField>