force-app/main/default/objects/Learning_Material_Instance__c/fields/Learner__c.field-meta.xml
<CustomField>
    <fullName>Learner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The Salesforce user assigned this material.</inlineHelpText>
    <label>Learner</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Learning Material Instances</relationshipLabel>
    <relationshipName>Learning_Material_Instances</relationshipName>
    <type>Lookup</type>
</CustomField>