force-app/main/default/objects/Learning_Material_Instance__c/fields/Material__c.field-meta.xml
<CustomField>
    <fullName>Material__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reference to content.</description>
    <inlineHelpText>Reference to content.</inlineHelpText>
    <label>Material</label>
    <referenceTo>Learning_Material__c</referenceTo>
    <relationshipLabel>Learning Material Instances</relationshipLabel>
    <relationshipName>Learning_Material_Instances</relationshipName>
    <type>Lookup</type>
</CustomField>