force-app/main/default/objects/Learning_Material_Instance__c/fields/Progress__c.field-meta.xml
<CustomField>
    <fullName>Progress__c</fullName>
    <inlineHelpText>Progress tracker.</inlineHelpText>
    <label>Progress</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>