force-app/main/default/objects/Learning_Material_Instance__c/fields/Score__c.field-meta.xml
<CustomField>
    <fullName>Score__c</fullName>
    <inlineHelpText>Optional score if graded.</inlineHelpText>
    <label>Score</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>