force-app/main/default/objects/Learning_Material_Instance__c/fields/Started_On__c.field-meta.xml
<CustomField>
    <fullName>Started_On__c</fullName>
    <description>First access timestamp.</description>
    <inlineHelpText>First access timestamp.</inlineHelpText>
    <label>Started On</label>
    <type>DateTime</type>
</CustomField>