force-app/main/default/objects/Learning_Material_Instance__c/fields/Time_Taken_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Time_Taken_Minutes__c</fullName>
    <description>Actual time taken to complete the quiz in minutes.</description>
    <inlineHelpText>Actual time spent completing the quiz (in minutes).</inlineHelpText>
    <label>Time Taken (Minutes)</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>