force-app/main/default/objects/Learning_Material_Instance__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Progress__c</columns>
    <columns>Completed_On__c</columns>
    <columns>Learner__c</columns>
    <columns>Score__c</columns>
    <columns>Material__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>